# py-scrape

./: .gitmodules  ScMzIvxBSi4.json  convert.ipynb  convert.py  convert_backup.py  scrape.py  test.json
Instagram/: scrape.ipynb  scrape.py
Youtube/: ScMzIvxBSi4.json  Test.json  pyproject.toml  scrape.py  test.csv
